# repo-pluse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: repo-pulse-project-introduction.md
src/repo_pulse/: __init__.py  cli.py  config.py  db.py  main.py  models.py  observability.py  repositories.py  runtime.py  scheduler.py  schemas.py  time_utils.py
src/repo_pulse/api/: routes.py
src/repo_pulse/details/: orchestrator.py  request_parser.py
src/repo_pulse/digest/: localization.py  service.py
src/repo_pulse/feishu/: cards.py  chat_selector.py  client.py  docs.py  messages.py  ws_client.py
src/repo_pulse/github/: client.py  discovery.py
src/repo_pulse/ranking/: scoring.py  topics.py
src/repo_pulse/research/: base.py  dashscope_provider.py  evidence.py  openai_provider.py  prompts.py
tests/: test_config.py  test_observability.py  test_repositories.py  test_runtime.py  test_scheduler.py  test_smoke.py  test_summary_localizer.py
tests/api/: test_routes.py
tests/details/: test_orchestrator.py
tests/feishu/: test_cards.py  test_chat_selector.py  test_docs.py  test_messages.py  test_ws_client.py
tests/github/: test_client.py  test_discovery.py
tests/ranking/: test_scoring.py
tests/research/: test_base.py  test_dashscope_provider.py  test_evidence.py  test_openai_provider.py
